--- a/01.はじめに.md
+++ b/01.はじめに.md
@@ -1,22 +1,33 @@
-# フロントエンド or バックエンド
+# React とは
 
-React はフロントエンドしかない。  
-なのでバックエンドにアクセスするときは API（Json）とかしかない（と思っていい）  
-※ASP.NET や JSP みたいなページに組み込めると思ったらその考えは捨てよう。
+ユーザインターフェース構築のための JavaScript ライブラリです。
 
-<br />
+React とは、Facebook 社が開発した Web サイト上の UI パーツを構築するための JavaScript ライブラリです。React.js と呼ばれることもあります。React 自体はフレームワークでなく、あくまでも UI を構築するだけのライブラリです。
 
-# 仮想 DOM
+<br>
 
-フロントエンドなので HTML の DOM を操作することになる。  
-JQuery の時はエレメントを取得して、その class をいじって、、、とかやってたけど、DOM まるごと入れ替えるイメージ。  
-→ これ結構重要なイメージだと思う。  
-DOM を直接いじると遅いけど、仮想 DOM を使って、変更された DOM だけ入れ替えるから高速。
+# フロントエンド
 
-<br/>
+React はユーザインターフェース構築のライブラリのためフロントエンド開発しかありません。（そう思って構いません。）
+
+ですので、バックエンドにアクセスするときは API を使ってデータを取得する必要があります。
+
+※ASP.NET や JSP みたいなページに組み込めると思ったらその考えは捨てましょう。
+
+<br>
+
+# 仮想 DOM による技術
+
+HTML の DOM を操作します。
+
+JQuery のような、エレメントを取得して、その class をいじって、、、ではなく、DOM まるごと入れ替えるイメージです。-> 重要なイメージです。
+
+DOM を直接いじると遅いですが、仮想 DOM を使えば変更された DOM だけ検知できるため描画処理が高速になります。
+
+仮想 DOM は React が処理をしますので開発者が意識することはありません。
+
+<br>
 
 # 開発環境
 
-HTML の<javascript>タグだけでもできるけど、拡張機能だったりを使用するから Node.js は必要。
-
-<br />
+Node.js は必要です。
