--- a/02.HTMLで書いてみる.md
+++ b/02.HTMLで書いてみる.md
@@ -1,6 +1,8 @@
-# HTML だけで React を書いてみるとどんな感じか
+# HTML だけで React を書いてみよう
 
-## 有名なカウントアップ
+直接 HTML だけでは作りませんので軽く聞いておいてください。
+
+有名なカウントアップです。
 
 ```html
 <!DOCTYPE html>
@@ -9,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <style>
@@ -22,16 +24,16 @@
     </style>
   </head>
   <body>
-    <h1>React</h1>
+    <h1>有名なカウントアップ</h1>
     <div id="root" onclick="doCount();">wait...</div>
     <script>
       let counter = 0;
-      let dom = document.querySelector('#root');
+      const dom = document.querySelector('#root');
       doCount();
 
       function doCount() {
         counter++;
-        let element = React.createElement('p', {}, 'count: ' + counter);
+        const element = React.createElement('p', {}, 'count: ' + counter);
         ReactDOM.render(element, dom);
       }
     </script>
@@ -39,131 +41,58 @@
 </html>
 ```
 
-### \<script\>タグ
+## \<script\>タグ
 
-React のスクリプトをロードする必要がある。
+React を使うためには React のスクリプトをロードする必要があります。
 
 ```html
 <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 ```
 
-### React 組込み用のタグ
+## React 組込み用のタグ
 
-大体、id は root。  
-onclick をイベントに
+だいたい id は root にします。どこのサンプルもこんな感じです。
+
+この id を指定した div に onclick イベントを登録します。
 
 ```html
 <div id="root" onclick="doCount();">wait...</div>
 ```
 
-### スクリプト
+## スクリプト
 
-関数のところは割愛
-
-#### 組込み用のタグを取得
+### 組込み用のタグを取得
 
 ```html
 let dom = document.querySelector('#root');
 ```
 
-#### 仮想エレメントの作成
+### 仮想エレメントの作成
 
-`React.CreateElement(タグ名, 属性, 中に組み込まれるもの)`
+React.CreateElement 関数の説明は以下になります。
+
+```html
+React.CreateElement(タグ名, 属性, コンテンツ);
+```
 
 ```html
 let element = React.createElement('p', {}, 'count: ' + counter);
 ```
 
-#### レンダリングの実行
+### レンダリングの実行
 
 ```html
 ReactDOM.render(element, dom);
 ```
 
-<br />
+<br>
 
-# デザインはできるか？
+# JSX 記法で書いてみよう
 
-できる。Bootstrap をしてみる。
+HTML の生成を React の関数で記述しました。とても見にくくわかりにくいです。
 
-```html
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-  </head>
-  <body>
-    <h1 class="bg-primary text-white display-4">React</h1>
-    <div class="container mt-3">
-      <div id="root">wait...</div>
-    </div>
-    <script>
-      let dom = document.querySelector('#root');
-
-      let element = React.createElement('div', {}, [
-        React.createElement('h2', {}, 'Hello!'),
-        React.createElement(
-          'h4',
-          { className: 'alert alert-primary' },
-          'React sample page.'
-        ),
-        React.createElement('ul', { className: 'list-group' }, [
-          React.createElement(
-            'li',
-            { className: 'list-group-item' },
-            'First item.'
-          ),
-          React.createElement(
-            'li',
-            { className: 'list-group-item' },
-            'Second item.'
-          ),
-          React.createElement(
-            'li',
-            { className: 'list-group-item' },
-            'Third item.'
-          ),
-        ]),
-      ]);
-
-      ReactDOM.render(element, dom);
-    </script>
-  </body>
-</html>
-```
-
-### \<link\>タグ
-
-bootstrap の css をロードする。普通に使う。
-
-```html
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-  crossorigin="anonymous"
-/>
-```
-
-<br />
-
-# JSX 記法で書いてみる
-
-`もっとシンプルに記述したい`
-
-## カウントアップを JSX 記法で書いてみる。
+直感的にシンプルにわかりやすく記述するために JSX 記法で書いてみましょう。
 
 ```html
 <!DOCTYPE html>
@@ -172,7 +101,7 @@ bootstrap の css をロードする。普通に使う。
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -186,16 +115,16 @@ bootstrap の css をロードする。普通に使う。
     </style>
   </head>
   <body>
-    <h1>React</h1>
+    <h1>有名なカウントアップ（JSX）</h1>
     <div id="root" onclick="doCount();">wait...</div>
     <script type="text/babel">
       let counter = 0;
-      let dom = document.querySelector('#root');
+      const dom = document.querySelector('#root');
       doCount();
 
       function doCount() {
         counter++;
-        let element = <p>count: {counter}</p>;
+        const element = <p>count: {counter}</p>;
         ReactDOM.render(element, dom);
       }
     </script>
@@ -203,30 +132,28 @@ bootstrap の css をロードする。普通に使う。
 </html>
 ```
 
-### babel をロードする
+## babel のロードを追加します
 
-HTML のタグを値として直接記述する。普通はエラーになるが、babel を使って javascript のコードに変換する。
+HTML のタグを値として直接記述しています。JavaScript の記述として普通はエラーになりますが、babel を使って JavaScript のコードに変換しています。
 
 ```html
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 ```
 
-### スクリプト
+## script
 
-`type="text/babel"`
+script の type に text/babel を指定します。
 
 ```html
 <script type="text/babel">
-  ....
+  ...
 </script>
 ```
 
-#### JSX で仮想エレメントの作成
+## JSX で仮想エレメントを作成します
 
-JavaScript の変数などは、{} で囲む。
+JavaScript の変数を展開する場合は {} で囲みます。
 
 ```jsx
-let element = <p>count: {counter}</p>;
+const element = <p>count: {counter}</p>;
 ```
-
-<br />
