--- a/03.コンポーネント.md
+++ b/03.コンポーネント.md
@@ -1,19 +1,27 @@
-# コンポーネント
+# コンポーネントという考え方
 
-React では「`コンポーネント`」が非常に重要。  
-コンポーネントとは React で画面に表示される「部品」のこと。  
-コンポーネントは、表示の内容や必要なデータ、処理などを１つのオブジェクトにまとめたもの。
+React では「コンポーネント」が非常に重要です。
 
-## シンプルな「関数」コンポーネント
+コンポーネントとは React で画面に表示される「部品」のことをいいます。
+
+コンポーネントは、表示の内容や必要なデータ、処理などを１つのオブジェクトにまとめたものです。
+
+<br>
+
+# シンプルな関数コンポーネントを作ってみよう
+
+突然、関数コンポーネントが出てきましたがまた後で説明をします。
 
 ```jsx
-function コンポーネント名(引数) {
+const コンポーネント名 = (引数) => {
   return JSX;
-}
+};
 ```
 
+具体的に Welcome コンポーネントを作ってみましょう。
+
 ```jsx
-function Welcome(props) {
+const Welcome = (props) => {]
   return (
     <div className='alert alert-primary'>
       <p className='h4'>Hello React!!</p>
@@ -22,19 +30,25 @@ function Welcome(props) {
 }
 ```
 
-## コンポーネントの利用
+<br>
 
-コンポーネントをそのままタグとして記述する。
+# コンポーネントのつかってみよう
+
+コンポーネントをそのままタグとして記述します。
 
 ```jsx
 <コンポーネント名 />
 ```
 
+具体的に Welcome コンポーネントを使ってみよう
+
 ```jsx
 <Welcome />
 ```
 
-## サンプル
+<br>
+
+# HTML でサンプルを作ってみよう
 
 ```html
 <!DOCTYPE html>
@@ -43,7 +57,7 @@ function Welcome(props) {
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -55,61 +69,59 @@ function Welcome(props) {
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <h1 class="bg-primary text-white display-4">React</h1>
+    <h1 class="bg-primary text-white display-4">コンポーネントを書いてみよう</h1>
     <div class="container mt-3">
       <div id="root">wait...</div>
     </div>
     <script type="text/babel">
-      let dom = document.querySelector('#root');
-
-      let message = 'React component page.';
-
+      const dom = document.querySelector('#root');
       // これが関数コンポーネント
-      function Welcome(props) {
+      const Welcome = (props) => {
         return (
           <div className='alert alert-primary'>
-            <p className='h4'>Hello React!!</p>
+            <p className='h4'>こんにちは</p>
           </div>
         );
-      }
-
-      // 表示するJSX
-      let el = (
+      };
+      // 関数コンポーネントを使ってみる
+      const el = (
         <div>
-          <h5 className='mb-4'>{message}</h5>
           <Welcome />
         </div>
       );
-
       ReactDOM.render(el, dom);
     </script>
   </body>
 </html>
 ```
 
-## コンポーネントの名前
+<br>
 
-`コンポーネントは必ず「大文字で始まる名前にする」`
+# コンポーネントの名前は？
 
-<br />
+コンポーネントの名前は必ず「大文字で始まる名前」にしてください。
 
-# 属性を使用する
+<br>
 
-関数コンポーネントには、引数が１つ用意される。
+# 属性を使用するには
 
-### 関数
-
-```jsx
-function X(props) { ... }
-```
-
-### JSX 記法
+関数コンポーネントには、引数が１つ用意されています。
 
 ```jsx
-<X a='abc' />
+const FunctionalComponent = (props) => {
+  // props.xxxでアクセスできます。
+  const variable_string = props.variable_string;
+  const variable_number = props.variable_number;
+};
 ```
 
-上記を手直しして属性を使ってみる。
+属性を指定します。
+
+```jsx
+<FunctionalComponent variable_string='あいうえお' variable_number={10} />
+```
+
+動かしてみよう。
 
 ```html
 <!DOCTYPE html>
@@ -118,7 +130,7 @@ function X(props) { ... }
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -130,33 +142,29 @@ function X(props) { ... }
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <h1 class="bg-primary text-white display-4">React</h1>
+    <h1 class="bg-primary text-white display-4">コンポーネントを書いてみよう</h1>
     <div class="container mt-3">
       <div id="root">wait...</div>
     </div>
     <script type="text/babel">
-      let dom = document.querySelector('#root');
-
-      let message = 'React component page.';
-
+      const dom = document.querySelector('#root');
       // これが関数コンポーネント
       function Welcome(props) {
         return (
           <div className={props.alert}>
-            <p className={props.fontSize}>Hello {props.name}!!</p>
+            <p className={props.fontSize}>
+              こんにちは {props.name}さん 年齢: {props.age}
+            </p>
           </div>
         );
       }
-
-      // 表示するJSX
-      let el = (
+      // 関数コンポーネントを使ってみる
+      const el = (
         <div>
-          <h5 className='mb-4'>{message}</h5>
-          <Welcome name='Taro' fontSize='h2' alert='alert alert-primary' />
-          <Welcome name='Hanako' fontSize='h5' alert='alert alert-dark' />
+          <Welcome name='佐藤' age={20} fontSize='h2' alert='alert alert-primary' />
+          <Welcome name='田中' age={30} fontSize='h2' alert='alert alert-primary' />
         </div>
       );
-
       ReactDOM.render(el, dom);
     </script>
   </body>
