--- a/04.クラスコンポーネント.md
+++ b/04.クラスコンポーネント.md
@@ -1,38 +1,42 @@
-# 関数からクラス
+# クラスコンポーネント
 
-`最後は関数コンポーネントへ戻ります。「へー」って程度で。`
+さっきまで関数コンポーネントで記述していました。クラスコンポーネントもやってみましょう。
 
-コンポーネントをすべて発揮するにはクラスコンポーネントが必要。  
-例えば、関数コンポーネントではステートを扱うことができない。  
-だって、ステート（状態）だから。関数は状態を持たないから。
+最後は関数コンポーネントで記述することになりますので、「へー」って程度で学習してください。
 
-<br />
+クラスコンポーネントはライブラリなどのソースで見ることはありますが、作成することは無いでしょう。
 
-# コンポーネントのクラス
+React は関数コンポーネントで作成することになります。
+
+<br>
+
+# クラスコンポーネントの書き方
 
 ```jsx
 class クラス名 extends 継承するクラス { ... }
 ```
 
-React には、コンポーネントの機能を一通り揃えた「React.Component」というクラスが用意されている。
+React には、コンポーネントの機能を一通り揃えた React.Component というクラスが用意されています。React.Component を継承してクラスを作成します。
 
 ```jsx
 class コンポーネント名 extends React.Component { ... }
 ```
 
+<br>
+
 # render メソッド
 
-コンポーネントクラスには、必ず用意しないければいけないものがある。  
-それが「render」。「render」は、コンポーネントのレンダリングをするメソッド。  
-コンポーネントクラスでは、このメソッドを必ず用意する必要がある。
+クラスコンポーネントには、必ず記述しないければいけないものがあります。
+
+それは render メソッドです。render メソッドは、コンポーネントのレンダリングをするメソッドです。
 
 ```jsx
 render() {
-  return ...JSX...;
+  return JSX;
 }
 ```
 
-書いてみる
+書いてみましょう。
 
 ```html
 <!DOCTYPE html>
@@ -41,7 +45,7 @@ render() {
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -53,46 +57,42 @@ render() {
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <h1 class="bg-primary text-white display-4">React</h1>
+    <h1 class="bg-primary text-white display-4">クラスコンポーネント</h1>
     <div class="container mt-3">
       <div id="root">wait...</div>
     </div>
     <script type="text/babel">
-      let dom = document.querySelector('#root');
-      let message = 'React component page.';
-
+      const dom = document.querySelector('#root');
+      // クラスコンポーネント
       class Hello extends React.Component {
         constructor(props) {
           super(props);
         }
-
         render() {
           return (
             <div className='alert alert-primary'>
-              <p className='h4'>Hello!!</p>
+              <p className='h4'>こんにちは</p>
             </div>
           );
         }
       }
-
-      let el = (
+      // クラスコンポーネントを使ってみる
+      const el = (
         <div>
-          <h5 className='mb-4'>{message}</h5>
           <Hello />
         </div>
       );
-
       ReactDOM.render(el, dom);
     </script>
   </body>
 </html>
 ```
 
-<br />
+<br>
 
-# 属性を利用する
+# 属性を使用するには
 
-関数コンポーネントと変わらない。props に渡されるだけ。
+関数コンポーネントと同じです。
 
 ```html
 <!DOCTYPE html>
@@ -101,7 +101,7 @@ render() {
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title></title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -113,14 +113,13 @@ render() {
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <h1 class="bg-primary text-white display-4">React</h1>
+    <h1 class="bg-primary text-white display-4">クラスコンポーネント</h1>
     <div class="container mt-3">
       <div id="root">wait...</div>
     </div>
     <script type="text/babel">
-      let dom = document.querySelector('#root');
-      let message = 'React component page.';
-
+      const dom = document.querySelector('#root');
+      // クラスコンポーネント
       class Rect extends React.Component {
         x = 0;
         y = 0;
@@ -150,21 +149,17 @@ render() {
           return <div style={this.style}></div>;
         }
       }
-
-      let el = (
+      // クラスコンポーネントを使ってみる
+      const el = (
         <div>
-          <h5 className='mb-4'>{message}</h5>
           <div>
-            <Rect x='200' y='200' w='200' h='200' c='cyan' />
-            <Rect x='300' y='300' w='200' h='200' c='magenta' />
+            <Rect x={200} y={200} w={200} h={200} c='cyan' />
+            <Rect x={300} y={300} w={200} h={200} c='magenta' />
           </div>
         </div>
       );
-
       ReactDOM.render(el, dom);
     </script>
   </body>
 </html>
 ```
-
-<br />
