--- a/05.プロジェクトへ.md
+++ b/05.プロジェクトへ.md
@@ -1,167 +1,179 @@
-# プロジェクトで開発
+# プロジェクトで開発をしよう
 
-コンポーネントベースの開発になってくると、HTML ファイルではなく、プロジェクトとして開発する必要になる。
+コンポーネントベースの開発になってくると、プロジェクトとして開発したほうが便利・楽。
 
-<br />
+<br>
 
-# プロジェクトの作成　 Create React App
+# プロジェクトを作成してみよう
 
-[React のプロジェクトを作成する](https://github.com/facebook/create-react-app)
+[create-react-app](https://github.com/facebook/create-react-app)
 
 ```zsh
 # npx の場合
-$ npx create-react-app <プロジェクト>
+npx create-react-app <プロジェクト名>
 
 # npm の場合
-$ npm init react-app <プロジェクト>
+npm init react-app <プロジェクト名>
 
 # yarn の場合
-$ yarn create react-app <プロジェクト>
+yarn create react-app <プロジェクト名>
 ```
 
-<br />
-
-# 簡単なプロジェクト
-
-プロジェクトを作成する
+## sample_react_app を作ってみよう
 
 ```zsh
-$ yarn create react-app 05_react_app
+yarn create react-app sample_react_app
 ```
 
-### 以下のように動作する
+## 実行してみよう
 
-- アクセスすると index.html が読み込まれる。
-- index.html を読み込む際、index.js が読み込まれ実行される。
-- index.js の中で App コンポーネントが読み込まれ表示される。
+```zsh
+cd sample_react_app
+yarn start
+```
 
-### index.html
+起動しましたか？
 
-React の表示を組み込むためのタグ
+<br>
+
+# ソースを見てみよう
+
+## public/index.html
+
+まず、public/index.html がロードされます。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
+```
+
+コメントは削除しています。
+
+どこかで見たような HTML です。ポイントは
 
 ```html
 <div id="root"></div>
 ```
 
-Bootstrap の CDN タグを追記する
+です。
 
-```html
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-  crossorigin="anonymous"
-/>
-```
+## src/index.js
 
-### index.js
+次に src/index.js がロードされます。
 
-ReactDOM.render で、\<App /> (App コンポーネント)を id='root'に組み込んで表示。
+React が src/index.js を自動的にロードしてくれます。
 
 ```js
 import React from 'react';
-import ReactDOM from 'react-dom';
+import ReactDOM from 'react-dom/client';
 import './index.css';
 import App from './App';
 import reportWebVitals from './reportWebVitals';
 
-ReactDOM.render(
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
   <React.StrictMode>
     <App />
-  </React.StrictMode>,
-  document.getElementById('root')
+  </React.StrictMode>
 );
 
 reportWebVitals();
 ```
 
-#### import によるロードについて
+コメントは削除しています。
 
-React オブジェクト
+こちらもどこかで見たような JavaScript です。そうです。HTML の javascript の中身に似ています。
 
 ```js
-import React from 'react';
+const root = ReactDOM.createRoot(document.getElementById('root'));
 ```
 
-ReactDOM オブジェクト
+id の DOM を取得しています。
 
 ```js
-import ReactDOM from 'react-dom';
+root.render(
+  <React.StrictMode>
+    <App />
+  </React.StrictMode>
+);
 ```
 
-index.css によるスタイルクラス
+その DOM の render メソッドを記述して、JSX を指定しています。
 
 ```js
-import './index.css';
+<App />
 ```
 
-App.js による App コンポーネント
+App コンポーネントを記述していますね。
+
+## src/App.js
+
+コンポーネントです。
 
 ```js
-import App from './App';
-```
-
-### App.js
-
-実際に表示されるコンポーネント
-
-```js
-import React, { Component } from 'react';
+import logo from './logo.svg';
 import './App.css';
 
-class App extends Component {
-  render() {
-    return (
-      <div>
-        <h1 className='bg-primary text-white display-4'>React</h1>
-        <div className='container'>
-          <p className='subtitle'>This is sample component</p>
-          <p>これはサンプルのコンポーネントです。</p>
-          <p>簡単なメッセージを表示します。</p>
-        </div>
-      </div>
-    );
-  }
+function App() {
+  return (
+    <div className='App'>
+      <header className='App-header'>
+        <img src={logo} className='App-logo' alt='logo' />
+        <p>
+          Edit <code>src/App.js</code> and save to reload.
+        </p>
+        <a className='App-link' href='https://reactjs.org' target='_blank' rel='noopener noreferrer'>
+          Learn React
+        </a>
+      </header>
+    </div>
+  );
 }
 
 export default App;
 ```
 
-#### export と import
+関数コンポーネントで記述しています。
 
-App コンポーネントをエクスポート
+return 関数の中に JSX を記述してレンダリング（描画）しています。
+
+簡単ですね。React はこんな感じです。
+
+クラスコンポーネントの場合は render メソッドで JSX をレンダリング（描画）する。
+
+関数コンポーネントの場合は return メソッドで JSX をレンダリング（描画）する。
+
+JSX とは JavaScript の中で HTML を記述できる。
+
+ざっくり言ってこれだけです。
+
+あとはページ遷移の方法とか、画像どうするのかとか、API の呼び出し方とか、これらはライブラリを調べることによって実現することができます。
+
+## import / export について
+
+他のソースからオブジェクトをロードするのが、import
+
+他のソースへ公開したい場合が、export
 
 ```js
-export default App;
+import xxx from 'yyyy';
 ```
-
-index.js でインポート
 
 ```js
-import App from './App';
-```
-
-#### スタイル App.css を手直し
-
-```css
-/* 最後に追記 */
-
-h1 {
-  text-align: right;
-  padding: 0px 50px 10px 50px;
-  margin: 0px 0px 10px 0px;
-}
-
-.subtitle {
-  margin: 20px 0px;
-  color: #999;
-  font-weight: border;
-  font-size: 24pt;
-}
-
-p {
-  margin: 5px 0px;
-  color: #666;
-  font-size: 16pt;
-}
+export xxx;
 ```
